--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+*,
+*::before,
+*::after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+:root {
+  --clr-bcg-white: #fff;
+  --clr-bcg-blue: #5ea3ec;
+  --clr-bcg-red: #f64444;
+  --clr-bcg-yellow: #ffb400;
+
+  --clr-black: #000;
+
+  --ff-ogg: "ogg";
+  --ff-apercu: "apercu mono";
+
+  --padding-inline: 6rem;
+}
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "sans-serif";
+  font-family: var(--ff-apercu);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--ff-ogg);
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 7.5rem;
+}
+
+h2 {
+  font-size: 11rem;
+}
+
+h3 {
+  font-size: 6rem;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  background-color: transparent;
+}
+
+section {
+  margin-bottom: 12rem;
 }
